--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ java {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://jitpack.io' }
 }
 
 ext {
@@ -28,8 +29,9 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'com.github.mwiede:jsch:0.2.18'
  	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-	implementation 'kr.bydelta:koalanlp-core:2.1.4' //형태소 분석기
-	
+ 	implementation 'com.github.shin285:KOMORAN:3.3.9'
+	//RabbitMQ 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	//implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	
