--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ dependencies {
  	implementation 'com.github.shin285:KOMORAN:3.3.9'
 	//RabbitMQ 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
-	//implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'org.webjars:webjars-locator-core:0.59'
