--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ ext {
 }
 
 dependencies {
+
+	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'
+	
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
