--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,8 +8,8 @@
 name: Java CI with Gradle
 
 on:
-  push:
-    branches: [ "develop" ]
+  #push:
+    #branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
 
