--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,15 @@ plugins {
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
+jar{
+	enabled=false
+}
+
+bootJar{
+	archiveFileName= "bookbook.jar"
+}
+
+
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
@@ -23,7 +32,8 @@ ext {
 }
 
 dependencies {
-
+	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.1'
 	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'
 	
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
