--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ java {
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
+    maven {url 'https://repo.spring.io/snapshot'} //스냅샷 저장소 추가
 }
 
 ext {
@@ -32,6 +33,9 @@ ext {
 }
 
 dependencies {
+
+	implementation 'com.google.cloud:google-cloud-vision:3.45.0'
+	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-SNAPSHOT'
 
 	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
     implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.1'
