--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,20 @@ version = '0.0.1-SNAPSHOT'
 
 jar{
 	enabled=false
+	
+	from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+
+    from('user.dic') {// JAR 파일의 루트에 'user.dic' 파일을 포함
+        into('/') // JAR 파일의 루트에 포함되도록 설정
+    }
+
+    manifest {
+        attributes(
+            'Main-Class': 'com.project.bookbook' // 메인 클래스 설정
+        )
+    }
 }
 
 bootJar{
