--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #개발용
-#spring.profiles.active=ssh,oauth2,aws,config
-#spring.config.import=optional:configserver:http://13.124.177.70:8888
+spring.profiles.active=ssh,oauth2,aws,config,recaptcha
+spring.config.import=optional:configserver:http://13.124.177.70:8888
 
 #배포용
-spring.profiles.active=ec2,oauth2,aws,config
-spring.config.import=optional:configserver:
+#spring.profiles.active=ec2,oauth2,aws,config
+#spring.config.import=optional:configserver:
 
