--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.1'
 	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'
 	
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
