feat:stt create

--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ ext {
 }
 
 dependencies {
-
+	implementation 'com.google.cloud:google-cloud-speech:2.6.0'
 	implementation 'com.google.cloud:google-cloud-vision:3.45.0'
 	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-SNAPSHOT'
 
